--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <tr>
                 <td><img class=header_image width= 150px src="images/nagendra_photo.jpg" alt="Photo Not Available"></td>
                 <td class="header_text">
-                    <b class=name>Nagendra Nainala2</b>
+                    <b class=name>Nagendra Nainala</b>
                     <br>
                     B.Tech (CSE) 3<sup>rd</sup> Year
                     <br>
