--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Nagendra's Personal Website</title>
 </head>
+
 <body>
+
     <div class="header_div">
         <table class="header" align="center">
             <tr>
@@ -25,39 +27,46 @@
 
     <p class=intro align=justify>
        This is Nagendra Nainala, a Computer Science undergraduate who is interested in working on challenging projects.
-       I am Oracle Certified Professional in Java
-	   and also passionate about Web designing. Developed few web applications using Java Servlets, MySQL integrated with HMTL, CSS and JS and
-	   deployed using Tomcat Web Server on Google Cloud Platform.
+       I am <b>Oracle Certified Professional in Java</b>
+	   and also passionate about <b>Software Development</b>. 
+       Developed few web applications using Java Servlets, PHP, Node.js integrated with MySQL and MongoDB databases. 
+	   Deployed on Heroku Platform.
     </p>
-
+    <br><br>
     <table align=center>
         <tr>
-            <td class=skills>
-                    <b>My Skills:</b>
-                    <ul style="margin-top: 10px; margin-bottom: 10px;">
-                    <li>C, C++, Java, Java 11, J-Shell</li>
-                    <li>Oracle, MySql Databases</li>
-                    <li>Web Designing</li>
-                    </ul>
+            <td>
+                <b style="font-size: 18px;">My Skills:</b>
+                <ul style="margin-top: 10px; margin-bottom: 10px;">
+                <li>Java, C, C++, JavaScript, JSP, PHP, SQL, HTML/CSS </li>
+                <li>Node.js, Express.js</li>
+                <li>Git, GitHub, JShell, Weka</li>
+                <li>Oracle SQL, MySQL and MongoDB Databases</li>
+                
+                </ul>
             </td>
-            <td class=data2><img src="images/OCA_batch.png" width=200px alt="" srcset=""></td>
-            <td class=data2><img src="images/OCP_batch.png" width=150px alt="" srcset=""></td>
+            <td><img src="images/OCA_batch.png" width=200px alt="" srcset=""></td>
+            <td><img src="images/OCP_batch.png" width=150px alt="" srcset=""></td>
         </tr>
     </table>
 
-	    <div class="footer_main">
-        <table align="center">
-            <tr>
-                <td class="footer"><img src="images/mobile_icon.png" width="30px" alt="" srcset=""></a></td>
-                <td class="footer_data">+91 701349086 <b>|</b></td>
-                <td class="footer"><img src="images/gmail_icon.png" width="30px" alt="" srcset=""></td>
-                <td class="footer_data">nnagendra0446@gmail.com <b>|</b></td>
-                <td class="footer"><a href="https://www.linkedin.com/in/nagendra0446" target="_blank"><img src="images/linked_in_icon.png" width="30px" alt="" srcset=""></a></td>
-                <td class="footer_data"><a href="https://www.linkedin.com/in/nagendra0446" target="_blank" class=footer_link>www.linkedin.com/in/nagendra0446 <b>|</b></a></td>  
-                <td class="footer"><a href="http://35.209.202.37:8080/nagendra/" target="_blank"><img src="images/personal_website.png" width="35px" style="margin-top: 3px;"></a></td>
-                <td class="footer_data"><a href="http://35.209.202.37:8080/nagendra/" target="_blank" class=footer_link>35.209.202.37:8080/nagendra</a></td>
-            </tr>
+    <div class="footer_div">
+    <table class="footer_table" align="center">
+        <tr>
+            <td><img src="images/mobile_icon.png" width="30px" alt="" srcset=""></a></td>
+            <td>+91 701349086</td>
+            <td><b>|</b></td>
+            <td><img src="images/gmail_icon.png" width="30px" alt="" srcset=""></td>
+            <td>nnagendra0446@gmail.com </td>
+            <td><b>|</b></td>
+            <td><a href="https://www.linkedin.com/in/nagendra0446" target="_blank"><img src="images/linked_in_icon.png" width="30px" alt="" srcset=""></a></td>
+            <td><a href="https://www.linkedin.com/in/nagendra0446" target="_blank" class=footer_link>www.linkedin.com/in/nagendra0446</a></td> 
+            <td><b>|</b></td> 
+            <td><a href="http://35.209.202.37:8080/nagendra/" target="_blank"><img src="images/personal_website.png" width="35px" style="margin-top: 3px;"></a></td>
+            <td><a href="http://35.209.202.37:8080/nagendra/" target="_blank" class=footer_link>35.209.202.37:8080/nagendra</a></td>
+        </tr>
     </table>
     </div>
+
 </body>
 </html>
