--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <td><img src="images/gmail_icon.png" width="30px" alt="" srcset=""></td>
             <td>nnagendra0446@gmail.com </td>
             <td><b>|</b></td>
-            <td><a href="www.linkedin.com/in/nagendra0446" target="_blank"><img src="images/linked_in_icon.png" width="30px" alt="" srcset=""></a></td>
-            <td><a href="www.linkedin.com/in/nagendra0446" target="_blank" class=footer_link>www.linkedin.com/in/nagendra0446</a></td> 
+            <td><a href="https://www.linkedin.com/in/nagendra0446" target="_blank"><img src="images/linked_in_icon.png" width="30px" alt="" srcset=""></a></td>
+            <td><a href="https://www.linkedin.com/in/nagendra0446" target="_blank" class=footer_link>www.linkedin.com/in/nagendra0446</a></td> 
             <td><b>|</b></td> 
-            <td><a href="github.com/nagendra0446" target="_blank"><img src="images/GitHub_logo.png" width="30px" alt="" srcset=""></a></td>
-            <td><a href="github.com/nagendra0446" target="_blank" class=footer_link>github.com/nagendra0446</a></td>
+            <td><a href="https://github.com/nagendra0446" target="_blank"><img src="images/GitHub_logo.png" width="30px" alt="" srcset=""></a></td>
+            <td><a href="https://github.com/nagendra0446" target="_blank" class=footer_link>github.com/nagendra0446</a></td>
 
             <!-- <td><a href="http://35.209.202.37:8080/nagendra/" target="_blank"><img src="images/personal_website.png" width="35px" style="margin-top: 3px;"></a></td>
             <td><a href="http://35.209.202.37:8080/nagendra/" target="_blank" class=footer_link>35.209.202.37:8080/nagendra</a></td> -->
