commit on master

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header_div">
         <table class="header" align="center">
             <tr>
-                <td><img class=header_image width= 150px src="images/nagendra_photo2.png" alt="Photo Not Available"></td>
+                <td><img class=header_image width= 150px src="images/nagendra_photo_imp_purp.png" alt="Photo Not Available"></td>
                 <td class="header_text">
                     <b class=name>Nagendra Nainala</b>
                     <br>
