--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <td class="header_text">
                     <b class=name>Nagendra Nainala</b>
                     <br>
-                    B.Tech (CSE), 3<sup>rd</sup> Year
+                    B.Tech (CSE), 4<sup>th</sup> Year
                     <br>
                     JNTUH College of Engineering, Sultanpur
                 </td>
